--- a/HW3/.classpath
+++ b/HW3/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/abdullah/My_Java/ICS_202/172ICS202Assignment3Q2/jgrapht-1.1.0.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
